feat: Implemented Project recommnedation and tests
